--- a/index.html
+++ b/index.html
@@ -1,16 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bootstrap freelancer</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>Bootstrap Freelancer</title>
+
 </head>
-<body>
-    
 
-
+<body class="debug">
+    <header id="app_header">
+        <div class="container debug">
+            <div class="row row-cols-auto justify-content-between align-items-center">
+                <div class="col">
+                    <h2>Start Bootstrap</h2>
+                </div>
+                <div class="col">=</div>
+            </div>
+        </div>
+    </header>
+    <main id="app_main debug">
+        <section id="jumbo">
+            <div class="container text-center">
+                <img src="" alt="#">
+                <h2>Start Bootstrap</h2>
+                ---stair---
+                <p>Graphics Artist - Web Designer - Illustrator</p>
+            </div>
+        </section>
+        <section id="portfolio" class="pb-4">
+            <div class="container text-center">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3">
+                    <div class="col-12 col-md-12 col-lg-12 col-xl-12">
+                        Contact Me
+                        <div>
+                            ---stair---
+                        </div>
+                    </div>
+                    <div class="col">
+                        <img src="" alt="#">
+                    </div>
+                    <div class="col">
+                        <img src="" alt="#">
+                    </div>
+                    <div class="col">
+                        <img src="" alt="#">
+                    </div>
+                    <div class="col">
+                        <img src="" alt="#">
+                    </div>
+                    <div class="col">
+                        <img src="" alt="#">
+                    </div>
+                    <div class="col">
+                        <img src="" alt="#">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="about" class="pb-4">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-8 col-md-4 col-xl-5 g-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Voluptates, dolorum eveniet, natus beatae culpa non, id cumque perspiciatis sint dolorem .</div>
+                    <div class="col-8 col-md-4 col-xl-5 g-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Esse rem modi omnis harum cumque. Nihil velit est ab incidunt expedita tenetur, quisquam </div>
+                </div>
+            </div>
+        </section>
+        <section id="contact">
+            <div class="container">
+                <div class="row flex-column align-items-center">
+                    <div class="col-8 col-md-8 col-xl-10">Contact me
+                        <div>--<!-- stair --></div>
+                    </div>
+                    <div class="col-8 col-md-8 col-xl-10">Name</div>
+                    <hr>
+                    <div class="col-8 col-md-8 col-xl-10">Email Address</div>
+                    <div class="col-8 col-md-8 col-xl-10">Phone Number</div>
+                    <div class="col-8 col-md-8 col-xl-10">Message</div>
+                    <div class="col-8 col-md-8 col-xl-10">
+                        <hr>
+                        <button>Send</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer id="app_footer debug ">
+        <div id="footer_top" class="text-center p-5 ">
+            <div class="container">
+                <div class="row row-cols-1 row-cols-md-3">
+                    <div class="col g-4">Location</div>
+                    <div class="col g-4">2215 John Daniel Drive Clark, MO 54243</div>
+                    <div class="col g-4">Around the web</div>
+                </div>
+            </div>
+        </div>
+        <div id="footer_bottom" class="text-center">
+            <div class="container d-flex justify-content-center align-items-center">copyright &copy; Your Website 2022
+            </div>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
