--- a/index.html
+++ b/index.html
@@ -11,23 +11,36 @@
     <title>Bootstrap Freelancer</title>
 
 </head>
-
 <body class="debug">
-    <header id="app_header">
-        <div class="container debug">
-            <div class="row row-cols-auto justify-content-between align-items-center">
-                <div class="col">
-                    <h2>Start Bootstrap</h2>
-                </div>
-                <div class="col">=</div>
+    <header id="app_header  ">
+        <nav class="navbar navbar-expand-lg color_header">
+            <div class="container">
+                <a class="navbar-brand text-uppercase" href="#">Start Bootstrap</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#portfolio">PORTFOLIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#about">ABOUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#contact">CONTRACT</a>
+                    </li>
+                </ul>
             </div>
-        </div>
+        </nav>
     </header>
     <main id="app_main debug">
         <section id="jumbo">
             <div class="container text-center">
                 <img src="" alt="#">
-                <h2>Start Bootstrap</h2>
+                <h2>START BOOTSTRAP</h2>
                 ---stair---
                 <p>Graphics Artist - Web Designer - Illustrator</p>
             </div>
@@ -62,7 +75,7 @@
                 </div>
             </div>
         </section>
-        <section id="about" class="pb-4">
+        <section id="about" class="pb-4 ">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-8 col-md-4 col-xl-5 g-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
