--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <title>Bootstrap Freelancer</title>
 
 </head>
+
 <body class="debug">
     <header id="app_header  ">
         <nav class="navbar navbar-expand-lg color_header">
-            <div class="container">
-                <a class="navbar-brand text-uppercase" href="#">Start Bootstrap</a>
+            <div class="container ">
+                <a class=" navbar-brand text-uppercase " href="#">Start Bootstrap</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="toggle navigation">
@@ -36,10 +37,10 @@
             </div>
         </nav>
     </header>
-    <main id="app_main debug">
+    <main id="app_main ">
         <section id="jumbo">
-            <div class="container text-center">
-                <img src="" alt="#">
+            <div class="container text-center color_light">
+                <img src="./assets/img/avatar.svg " width="200px" alt="#">
                 <h2>START BOOTSTRAP</h2>
                 ---stair---
                 <p>Graphics Artist - Web Designer - Illustrator</p>
@@ -49,28 +50,28 @@
             <div class="container text-center">
                 <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3">
                     <div class="col-12 col-md-12 col-lg-12 col-xl-12">
-                        Contact Me
+                        <h3>PORTFOLIO</h3>
                         <div>
                             ---stair---
                         </div>
                     </div>
                     <div class="col">
-                        <img src="" alt="#">
+                        <img src="./assets/img/cabin.png" width="100%" alt="#">
                     </div>
                     <div class="col">
-                        <img src="" alt="#">
+                        <img src="./assets/img/cake.png" width="100%" alt="#">
                     </div>
                     <div class="col">
-                        <img src="" alt="#">
+                        <img src="./assets/img/circus.png" width="100%" alt="#">
                     </div>
                     <div class="col">
-                        <img src="" alt="#">
+                        <img src="./assets/img/game.png" width="100%" alt="#">
                     </div>
                     <div class="col">
-                        <img src="" alt="#">
+                        <img src="./assets/img/safe.png" width="100%" alt="#">
                     </div>
                     <div class="col">
-                        <img src="" alt="#">
+                        <img src="./assets/img/submarine.png" width="100%" alt="#">
                     </div>
                 </div>
             </div>
@@ -78,23 +79,33 @@
         <section id="about" class="pb-4 ">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-8 col-md-4 col-xl-5 g-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Voluptates, dolorum eveniet, natus beatae culpa non, id cumque perspiciatis sint dolorem .</div>
-                    <div class="col-8 col-md-4 col-xl-5 g-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Esse rem modi omnis harum cumque. Nihil velit est ab incidunt expedita tenetur, quisquam </div>
+                    <div class="col-8 col-md-4 col-xl-5 g-4 color_light">Freelancer is a free bootstrap theme created by
+                        Start
+                        bootstrap.The download includes the complete source files including HTML, CSS, AND Java Script
+                        as well as optional LESS stylesheets for easy customization.</div>
+                    <div class="col-8 col-md-4 col-xl-5 g-4 color_light">Whether you're a student looking to showcase
+                        your work, a professional looking to attract clients, or a graphic artist looking to share your
+                        projects, this template is the perfect starting point!</div>
+                    <button>Download</button>
                 </div>
             </div>
         </section>
         <section id="contact">
             <div class="container">
                 <div class="row flex-column align-items-center">
-                    <div class="col-8 col-md-8 col-xl-10">Contact me
+                    <div class="col-8 col-md-8 col-xl-10">
+                        <h3>CONTACT ME</h3>
                         <div>--<!-- stair --></div>
                     </div>
-                    <div class="col-8 col-md-8 col-xl-10">Name</div>
-                    <hr>
-                    <div class="col-8 col-md-8 col-xl-10">Email Address</div>
-                    <div class="col-8 col-md-8 col-xl-10">Phone Number</div>
+                    <div class="col-8 col-md-8 col-xl-10">Name
+                        <hr>
+                    </div>
+                    <div class="col-8 col-md-8 col-xl-10">Email Address
+                        <hr>
+                    </div>
+                    <div class="col-8 col-md-8 col-xl-10">Phone Number
+                        <hr>
+                    </div>
                     <div class="col-8 col-md-8 col-xl-10">Message</div>
                     <div class="col-8 col-md-8 col-xl-10">
                         <hr>
