--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Bootstrap Freelancer</title>
 
 </head>
 
-<body class="debug">
+<body>
     <header id="app_header  ">
         <nav class="navbar navbar-expand-lg color_header">
             <div class="container ">
@@ -86,14 +89,14 @@
                     <div class="col-8 col-md-4 col-xl-5 g-4 color_light">Whether you're a student looking to showcase
                         your work, a professional looking to attract clients, or a graphic artist looking to share your
                         projects, this template is the perfect starting point!</div>
-                    <button>Download</button>
                 </div>
+                <button class="download_btn">Download</button>
             </div>
         </section>
         <section id="contact">
             <div class="container">
                 <div class="row flex-column align-items-center">
-                    <div class="col-8 col-md-8 col-xl-10">
+                    <div class="col-8 col-md-8 col-xl-10 d_contents ">
                         <h3>CONTACT ME</h3>
                         <div>--<!-- stair --></div>
                     </div>
@@ -109,19 +112,34 @@
                     <div class="col-8 col-md-8 col-xl-10">Message</div>
                     <div class="col-8 col-md-8 col-xl-10">
                         <hr>
-                        <button>Send</button>
+                        <button class="green_btn">Send</button>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-    <footer id="app_footer debug ">
+    <footer id="app_footer" class="color_light">
         <div id="footer_top" class="text-center p-5 ">
             <div class="container">
                 <div class="row row-cols-1 row-cols-md-3">
-                    <div class="col g-4">Location</div>
-                    <div class="col g-4">2215 John Daniel Drive Clark, MO 54243</div>
-                    <div class="col g-4">Around the web</div>
+                    <div class="col g-4">
+                        <h5>Location</h5>
+                        <div>2215 John Daniel Drive Clark, MO 54243</div>
+                    </div>
+                    <div class="col g-4">
+                        <h5>Around the web</h5>
+                        <div>
+                            <i class="fa-brands fa-facebook-f circle_border"></i>
+                            <i class="fa-brands fa-google-plus-g circle_border"></i>
+                            <i class="fa-brands fa-twitter circle_border"></i>
+                            <i class="fa-brands fa-linkedin-in circle_border"></i>
+                        </div>
+                    </div>
+                    <div class="col g-4">
+                        <h5>ABOUT FREELANCER</h5>
+                        <div>Freelance is a free to use, open source Bootstrap theme created by <a class="green_link"
+                                href="#"> Start Bootstrap</a>.</div>
+                    </div>
                 </div>
             </div>
         </div>
