--- a/index.html
+++ b/index.html
@@ -16,25 +16,27 @@
 </head>
 
 <body>
-    <header id="app_header  ">
+    <header id="app_header">
         <nav class="navbar navbar-expand-lg color_header">
             <div class="container ">
-                <a class=" navbar-brand text-uppercase " href="#">Start Bootstrap</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <a class="text-white navbar-brand text-uppercase " href="#">Start Bootstrap</a>
+                <div>
+                    <button class="navbar-toggler text-white " type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#portfolio">PORTFOLIO</a>
+                        <a class="text-white nav-link active" aria-current="page" href="#portfolio">PORTFOLIO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#about">ABOUT</a>
+                        <a class="text-white nav-link active" href="#about">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#contact">CONTRACT</a>
+                        <a class="text-white nav-link active" href="#contact">CONTRACT</a>
                     </li>
                 </ul>
             </div>
@@ -42,7 +44,7 @@
     </header>
     <main id="app_main ">
         <section id="jumbo">
-            <div class="container text-center color_light">
+            <div class="container text-center text-light">
                 <img src="./assets/img/avatar.svg " width="200px" alt="#">
                 <h2>START BOOTSTRAP</h2>
                 ---stair---
@@ -82,15 +84,16 @@
         <section id="about" class="pb-4 ">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-8 col-md-4 col-xl-5 g-4 color_light">Freelancer is a free bootstrap theme created by
+                    <div class="col-8 col-md-4 col-xl-5 g-4 text-white">Freelancer is a free bootstrap theme created by
                         Start
                         bootstrap.The download includes the complete source files including HTML, CSS, AND Java Script
                         as well as optional LESS stylesheets for easy customization.</div>
-                    <div class="col-8 col-md-4 col-xl-5 g-4 color_light">Whether you're a student looking to showcase
+                    <div class="col-8 col-md-4 col-xl-5 g-4 text-white">Whether you're a student looking to showcase
                         your work, a professional looking to attract clients, or a graphic artist looking to share your
                         projects, this template is the perfect starting point!</div>
+                        <button class="download_btn">Download</button>
                 </div>
-                <button class="download_btn">Download</button>
+               
             </div>
         </section>
         <section id="contact">
@@ -118,7 +121,7 @@
             </div>
         </section>
     </main>
-    <footer id="app_footer" class="color_light">
+    <footer id="app_footer" class="text-light">
         <div id="footer_top" class="text-center p-5 ">
             <div class="container">
                 <div class="row row-cols-1 row-cols-md-3">
@@ -151,7 +154,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
