--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header id="app_header">
-        <nav class="navbar navbar-expand-lg color_header">
+        <nav class="navbar navbar-expand-lg color_header navbar-dark">
             <div class="container ">
                 <a class="text-white navbar-brand text-uppercase " href="#">Start Bootstrap</a>
                 <div>
@@ -29,13 +29,13 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item d-none d-lg-inline ">
                         <a class="text-white nav-link active" aria-current="page" href="#portfolio">PORTFOLIO</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-none d-lg-inline">
                         <a class="text-white nav-link active" href="#about">ABOUT</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-none d-lg-inline">
                         <a class="text-white nav-link active" href="#contact">CONTRACT</a>
                     </li>
                 </ul>
@@ -47,7 +47,12 @@
             <div class="container text-center text-light">
                 <img src="./assets/img/avatar.svg " width="200px" alt="#">
                 <h2>START BOOTSTRAP</h2>
-                ---stair---
+                <div class="star_hr d-flex justify-content-center
+                align-items-center gap-3">
+                    <div class="hr_large bg-light"></div>
+                    <div class="star"><i class="fa-solid fa-star fa-2x"></i></div>
+                    <div class="hr_large bg-light"></div>
+                </div>
                 <p>Graphics Artist - Web Designer - Illustrator</p>
             </div>
         </section>
@@ -57,7 +62,12 @@
                     <div class="col-12 col-md-12 col-lg-12 col-xl-12">
                         <h3>PORTFOLIO</h3>
                         <div>
-                            ---stair---
+                            <div class="star_hr d-flex justify-content-center
+                        align-items-center gap-3">
+                                <div class="hr_small bg-dark"></div>
+                                <div class="star"><i class="fa-solid fa-star fa-2x"></i></div>
+                                <div class="hr_small bg-dark"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="col">
@@ -91,7 +101,9 @@
                     <div class="col-8 col-md-4 col-xl-5 g-4 text-white">Whether you're a student looking to showcase
                         your work, a professional looking to attract clients, or a graphic artist looking to share your
                         projects, this template is the perfect starting point!</div>
-                        <button class="download_btn">Download</button>
+                </div>
+                <div class="text-center">
+                    <button class="download_btn">Download</button>
                 </div>
                
             </div>
@@ -101,7 +113,14 @@
                 <div class="row flex-column align-items-center">
                     <div class="col-8 col-md-8 col-xl-10 d_contents ">
                         <h3>CONTACT ME</h3>
-                        <div>--<!-- stair --></div>
+                        <div>
+                            <div class="star_hr d-flex justify-content-center
+                            align-items-center gap-3">
+                                <div class="hr_small bg-dark"></div>
+                                <div class="star"><i class="fa-solid fa-star fa-2x"></i></div>
+                                <div class="hr_small bg-dark"></div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-8 col-md-8 col-xl-10">Name
                         <hr>
@@ -140,8 +159,9 @@
                     </div>
                     <div class="col g-4">
                         <h5>ABOUT FREELANCER</h5>
-                        <div>Freelance is a free to use, open source Bootstrap theme created by <a class="green_link"
-                                href="#"> Start Bootstrap</a>.</div>
+                        <div>Freelance is a free to use, open source Bootstrap theme created by
+                            <a class="green_link text-decoration-none " href="#">Start Bootstrap</a>.
+                        </div>
                     </div>
                 </div>
             </div>
